docs for update/delete
